<resources>
    <string name="app_name">Work1</string>
    <string name="haikawa_text">\tАки Хаякава (早川はやかわ アキ Hayakawa Aki?) – охотник на демонов бюро Общественной Безопасности, работавшим в специальном отряде Макимы. Он имеет контракты с демоном Проклятий и демоном Будущего, а в прошлом также имел уже утративший силу контракт с демоном Лисы. Был убит и одержим 20% демоном Огнестрела, из-за чего стал извергом-Пушкой (銃じゅうの魔ま人じん Jū no Majin?). Он был дейтерагонистом Саги об общественной безопасности.</string>
    <string name="title1">\tОписание:</string>
    <string name="title2">\tВнешность:</string>
    <string name="haikawa_appearance">\tАки Хаякава – привлекательный юноша с чёрными волосами средней длины и голубыми глазами. Обычно он завязывает волосы в хвостик. Он часто носит костюм охотника за демонами общественной безопасности и галстук. Он также носит серьги и обычно держит свой меч на спине.</string>
    <string name="title3">\tЛичность:</string>
    <string name="haikawa_lichnoe">\tАки в целом производит впечатление очень твёрдой личности. В общении с товарищами по охоте на демонов он ведёт себя зрело и порой даже грубо, но на самом деле он довольно мягкосердечен. У него есть склонность легко привязываться к другим, и он ненавидит, когда люди страдают, особенно его близкие друзья. В отличие от многих из своих соратников, Химэно называет его «нормальным человеком», в том смысле, что он всё ещё скорбит о погибших и не стал достаточно извращённым, чтобы скрывать свои чувства. Несмотря на это, он очень решителен, и его главная мотивация для убийства демона Огнестрела – месть за свою семью. Однако он полностью готов пожертвовать собственной жизнью ради спасения других людей, несмотря на собственный страх смерти и даже рискуя своей конечной целью.</string>
    <string name="new_life_for_mirea_activity">New life for mirea activity!</string>
    <string name="string_button1">Кнопка один</string>
    <string name="string_button2">Кнопка два</string>
    <string name="string_button3">Кнопка три</string>
    <string name="string_button4">Кнопка четыре</string>
    <string name="string_button5">Кнопка пять</string>
    <string name="string_button6">Кнопка шесть</string>
</resources>